parser/tests/snapshots/errors__emit_expr.snap
---
source: parser/tests/errors.rs
expression: err

---
error: failed to parse event invocation parameter list
  ┌─ emit_expr:1:8
  │
1 │ emit x + 1
  │        ^ Unexpected token. Expected `(`


